fixed whitespace on right handside for footer and main body

--- a/src/app/component/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar.component.css
@@ -6,7 +6,7 @@
   border-radius:0px;
   background: #87CEFA;
   border-color: #87CEFA;
-  padding-left: 50px;
+  padding-left: 25px;
 
 }
 
