--- a/src/app/component/profile/profile.component.css
+++ b/src/app/component/profile/profile.component.css
@@ -4,7 +4,7 @@ section{
 
 
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 
